--- a/landingpage.html
+++ b/landingpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>newJobs(you) - Job Listings</title>
+    <title>newJobs(you)</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
@@ -16,16 +16,13 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header>
+    <div>
       <div></div>
       <form action="">
         <input type="text" class="zip-code" placeholder="Enter Zip Code" />
         <button>Find Jobs!</button>
       </form>
-    </header>
-    <div>Job Cards</div>
-    <div>Pagination</div>
-    <footer>Used APIs, etc</footer>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
       integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
