--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
       <div></div>
       <form action="">
         <input type="text" class="zip-code" placeholder="Enter Zip Code" />
-        <button>Find Jobs!</button>
+        <button class="btn jobs-btn">Find Jobs!</button>
       </form>
     </header>
     <div>Job Cards</div>
-    <div>Pagination</div>
+    <div class="pagination">
+      <button class="btn pagination-btn" id="previous-page"></button>
+      <button class="btn pagination-btn" id="next-page"></button>
+    </div>
     <footer>Used APIs, etc</footer>
     <script
       src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
