--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
     <div>Job Cards</div>
     <div class="pagination">
-      <button class="btn pagination-btn" id="previous-page"></button>
-      <button class="btn pagination-btn" id="next-page"></button>
+      <button class="btn pagination-btn" id="previous-page">Previous Page</button>
+      <button class="btn pagination-btn" id="next-page">Next Page</button>
     </div>
     <footer>Used APIs, etc</footer>
     <script
