style landing page and pagination

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <!-- header for logo, zip input, and search button -->
-    <header>
+    <header class="search-container">
       <div></div>
       <form action="">
         <input type="text" class="zip-code" placeholder="Enter Zip Code" />
