--- a/landingpage.html
+++ b/landingpage.html
@@ -16,11 +16,11 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <div>
+    <div class="search-container search-container-lp">
       <div></div>
       <form action="">
         <input type="text" class="zip-code" placeholder="Enter Zip Code" />
-        <button>Find Jobs!</button>
+        <button class="btn jobs-btn">Find Jobs!</button>
       </form>
     </div>
     <script
