changed card layout and reveal styling

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <!-- div for dynamically created cards -->
     <main>
-      <div class="cards-container"></div>
+      <div class="cards-container row"></div>
     </main>
     <!-- div for pagination -->
     <div class="pagination">
