added navigation between pages and local storage for zip code

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     <header class="search-container">
       <div></div>
       <form action="">
-        <input type="text" class="zip-code" placeholder="Enter Zip Code" />
+        <input
+          type="text"
+          class="main-zip-code zip-code"
+          placeholder="Enter Zip Code"
+        />
         <button class="btn jobs-btn">Find Jobs!</button>
       </form>
     </header>
