--- a/landingpage.html
+++ b/landingpage.html
@@ -20,7 +20,7 @@
       <div></div>
       <form action="">
         <input type="text" class="zip-code" placeholder="Enter Zip Code" />
-        <button class="btn jobs-btn">Find Jobs!</button>
+        <button class="btn jobs-btn jobs-btn-lp">Find Jobs!</button>
       </form>
     </div>
     <script
