--- a/landingpage.html
+++ b/landingpage.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body>
+  <body id="landing-page-body">
     <div class="search-container search-container-lp">
       <div></div>
       <form action="">
