--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   <body>
     <!-- header for logo, zip input, and search button -->
     <header class="search-container">
-      <div></div>
+      <img src="./assets/images/newJobsyou-01.png" />
       <form action="">
         <input
           type="text"
           class="main-zip-code zip-code"
           placeholder="Enter Zip Code"
         />
-        <button class="btn jobs-btn">Find Jobs!</button>
+        <button class="btn jobs-btn waves-effect waves-light">Find Jobs!</button>
       </form>
     </header>
     <!-- div for dynamically created cards -->
@@ -43,11 +43,11 @@
     <!-- div for pagination -->
     <div class="pagination">
       <!-- previous page button -->
-      <button class="btn pagination-btn" id="previous-page">
+      <button class="btn pagination-btn waves-effect waves-light" id="previous-page">
         Previous Page
       </button>
       <!-- next page button -->
-      <button class="btn pagination-btn" id="next-page">Next Page</button>
+      <button class="btn pagination-btn waves-effect waves-light" id="next-page">Next Page</button>
     </div>
     <!-- footer for API and technical info -->
     <footer>Used APIs, etc</footer>
