--- a/landingpage.html
+++ b/landingpage.html
@@ -16,11 +16,11 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body id="landing-page-body">
+    <img src="./assets/images/newJobsyou-01.png" />
     <div class="search-container search-container-lp">
-      <div></div>
       <form action="">
         <input type="text" class="zip-code" placeholder="Enter Zip Code" />
-        <button class="btn jobs-btn jobs-btn-lp">Find Jobs!</button>
+        <button class="btn jobs-btn jobs-btn-lp waves-effect waves-light">Find Jobs!</button>
       </form>
     </div>
     <script
