changed logo imgages from png to svg

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <!-- header for logo, zip input, and search button -->
     <header class="search-container">
-      <img src="./assets/images/newJobsyou-01.png" />
+      <img src="./assets/images/newJobsyou-01.svg" id="jobs-page-image"/>
       <form action="">
         <input
           type="text"
