--- a/landingpage.html
+++ b/landingpage.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body id="landing-page-body">
-    <img src="./assets/images/newJobsyou-01.png" />
+    <img src="./assets/images/newJobsyou-01.svg" id="landing-page-image"/>
     <div class="search-container search-container-lp">
       <form action="">
         <input type="text" class="zip-code" placeholder="Enter Zip Code" />
