--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
           class="main-zip-code zip-code"
           placeholder="Enter Zip Code"
         />
-        <button class="btn jobs-btn waves-effect waves-light">Find Jobs!</button>
+        <button class="btn jobs-btn waves-effect waves-light">
+          Find Jobs!
+        </button>
       </form>
     </header>
     <!-- div for dynamically created cards -->
@@ -43,11 +45,23 @@
     <!-- div for pagination -->
     <div class="pagination">
       <!-- previous page button -->
-      <button class="btn pagination-btn waves-effect waves-light" id="previous-page">
-        Previous Page
-      </button>
+      <a href="#">
+        <button
+          class="btn pagination-btn waves-effect waves-light"
+          id="previous-page"
+        >
+          Previous Page
+        </button>
+      </a>
       <!-- next page button -->
-      <button class="btn pagination-btn waves-effect waves-light" id="next-page">Next Page</button>
+      <a href="#">
+        <button
+          class="btn pagination-btn waves-effect waves-light"
+          id="next-page"
+        >
+          Next Page
+        </button>
+      </a>
     </div>
     <!-- footer for API and technical info -->
     <footer>Used APIs, etc</footer>
