footer and city and state

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </header>
     <!-- div for dynamically created cards -->
     <main>
+      <div id="city-state"></div>
       <div class="cards-container row"></div>
     </main>
     <!-- div for pagination -->
@@ -64,7 +65,16 @@
       </a>
     </div>
     <!-- footer for API and technical info -->
-    <footer>Used APIs, etc</footer>
+    <footer>
+      <p>Contributers: Atticus Robinson, Melissa Moreno, and Spencer Hulse</p>
+      <p>Thanks to Ziptastic and The Muse for some great APIs!</p>
+      <p>
+        Check out the code on
+        <a href="https://github.com/SpencerHulse/newJobs-you" target="_blank"
+          >GitHub</a
+        >!
+      </p>
+    </footer>
     <!-- jQuery script -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
